@@ -1,5 +1,6 @@
 * 1.7.0.0
 	* New features:
+		- Add qtrim_front, qtrim_back command(2014-10-11)
 		- ssdb-dump support auth(2014-10-10)
 		- Add max_open_files config, default is 100(2014-10-08)
 		- Add auth command(2014-09-20)
